--- a/public/css/main.css
+++ b/public/css/main.css
@@ -80,6 +80,14 @@ h1 {
     font-size: 2rem;
 }
 
+.container-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: 2rem;
+    padding: 1.9rem;
+}
+
 ::-webkit-scrollbar {
     display: none;
 }
