--- a/public/css/main.css
+++ b/public/css/main.css
@@ -80,7 +80,7 @@ h1 {
     font-size: 2rem;
 }
 
-.container-header {
+header .container-header {
     display: flex;
     align-items: center;
     justify-content: space-around;
